[package]
name = "bento"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = [
    "cargo",
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
reqwest = { version = "0.12.9", features = ["gzip", "brotli", "zstd", "deflate", "json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log"] }
