[package]
name = "bento"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.95"
base16ct = { version = "0.2.0", features = ["std"] }
clap = { version = "4.5.23", features = [
    "cargo",
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
deno_semver = "0.7.1"
flate2 = "1.0.35"
futures = "0.3.31"
indicatif = "0.17.9"
owo-colors = "4.1.0"
reqwest = { version = "0.12.11", features = [
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "json",
    "stream",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha1 = "0.10.6"
tar = "0.4.43"
textwrap = "0.16.1"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "tracing-log",
] }
