[package]
name = "bento"
version = "0.1.0"
authors = ["Federico Morrone <contact@morrone.dev>"]
edition = "2021"

[dependencies]
anyhow = "1.0.44"
atoi = "0.4.0"
nom = "7.0.0"
thiserror = "1.0.30"
indexmap = { version = "1.7.0", optional = true }
url =  { version = "2.2.2", optional = true }
bento_derive = { version = "0.1.0", optional = true, path = "../bento_derive" }

[features]
derive = ["bento_derive"]

[dev-dependencies]
criterion = { version = "0.3.5", default-features = false }
sha-1 = "0.9.8"
